src/test/deca/context/invalid/created/identifier-non-declare.deca
//Description :
// Expression invalide
//
// Resultats :
// Erreur

{
    intx = true;
}
